tests/networkfirewall/ctrl-nfw-01/ac04-setup.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# AC-4: KropathConfig.mandatory.networkfirewall.statefulRuleOrder (level 1)
# flows to effCfg.mandatory.statefulRuleOrder.
apiVersion: v1
kind: Namespace
metadata:
  name: ac4-nfw-global-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: ac4-nfw-app-ns
  annotations:
    aws.kropath.run/global-config-namespace: ac4-nfw-global-ns
---
apiVersion: aws.kropath.run/v1alpha1
kind: KropathConfig
metadata:
  name: baseline
  namespace: ac4-nfw-global-ns
spec:
  mandatory:
    networkfirewall:
      statefulRuleOrder: "STRICT_ORDER"
  aws:
    accountId: "123456789012"
    region: "us-east-1"
---
apiVersion: aws.kropath.run/v1alpha1
kind: NetworkFirewallConfig
metadata:
  name: ac4-nfw-policy
  namespace: ac4-nfw-app-ns
spec: {}
