tests/networkfirewall/ctrl-nfw-01/ac08-setup.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# AC-8: globalNFWConfig.mandatory.namingTemplate (level 3) flows to effCfg.mandatory.namingTemplate.
# KropathConfig levels do NOT carry namingTemplate.
apiVersion: v1
kind: Namespace
metadata:
  name: ac8-nfw-global-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: ac8-nfw-app-ns
  annotations:
    aws.kropath.run/global-config-namespace: ac8-nfw-global-ns
    services.k8s.aws/owner-account-id: "123456789012"
    services.k8s.aws/default-region: "us-east-1"
---
apiVersion: aws.kropath.run/v1alpha1
kind: KropathConfig
metadata:
  name: baseline
  namespace: ac8-nfw-global-ns
spec:
  aws:
    accountId: "123456789012"
    region: "us-east-1"
---
apiVersion: aws.kropath.run/v1alpha1
kind: NetworkFirewallConfig
metadata:
  name: ac8-nfw-policy
  namespace: ac8-nfw-global-ns
spec:
  mandatory:
    namingTemplate: "{namespace}-{name}-fw"
---
apiVersion: aws.kropath.run/v1alpha1
kind: NetworkFirewallConfig
metadata:
  name: ac8-nfw-policy
  namespace: ac8-nfw-app-ns
spec: {}
