tests/networkfirewall/ctrl-nfw-01/ac11-setup.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# AC-11: KropathConfig.spec.aws.accountId and region flow into effCfg.aws.
apiVersion: v1
kind: Namespace
metadata:
  name: ac11-nfw-global-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: ac11-nfw-app-ns
  annotations:
    aws.kropath.run/global-config-namespace: ac11-nfw-global-ns
    services.k8s.aws/owner-account-id: "999888777666"
    services.k8s.aws/default-region: "eu-west-1"
---
apiVersion: aws.kropath.run/v1alpha1
kind: KropathConfig
metadata:
  name: baseline
  namespace: ac11-nfw-global-ns
spec: {}
---
apiVersion: aws.kropath.run/v1alpha1
kind: NetworkFirewallConfig
metadata:
  name: ac11-nfw-policy
  namespace: ac11-nfw-app-ns
spec: {}
